@@ -47,15 +47,6 @@ name|java
 operator|.
 name|util
 operator|.
-name|Collection
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
 name|PriorityQueue
 import|;
 end_import
@@ -102,7 +93,7 @@ begin_comment
 comment|// for javadoc
 end_comment
 begin_comment
-comment|/**  * An abstract {@link Query} that matches documents  * containing a subset of terms provided by a {@link  * FilteredTermEnum} enumeration.  *  *<p>This query cannot be used directly; you must subclass  * it and define {@link #getEnum} to provide a {@link  * FilteredTermEnum} that iterates through the terms to be  * matched.  *  *<p><b>NOTE</b>: if {@link #setRewriteMethod} is either  * {@link #CONSTANT_SCORE_BOOLEAN_QUERY_REWRITE} or {@link  * #SCORING_BOOLEAN_QUERY_REWRITE}, you may encounter a  * {@link BooleanQuery.TooManyClauses} exception during  * searching, which happens when the number of terms to be  * searched exceeds {@link  * BooleanQuery#getMaxClauseCount()}.  Setting {@link  * #setRewriteMethod} to {@link #CONSTANT_SCORE_FILTER_REWRITE}  * prevents this.  *  *<p>The recommended rewrite method is {@link  * #CONSTANT_SCORE_AUTO_REWRITE_DEFAULT}: it doesn't spend CPU  * computing unhelpful scores, and it tries to pick the most  * performant rewrite method given the query. If you  * need scoring (like {@link FuzzyQuery}, use  * {@link #TOP_TERMS_SCORING_BOOLEAN_REWRITE} which uses  * a priority queue to only collect competitive terms  * and not hit this limitation.  *  * Note that {@link QueryParser} produces  * MultiTermQueries using {@link  * #CONSTANT_SCORE_AUTO_REWRITE_DEFAULT} by default.  */
+comment|/**  * An abstract {@link Query} that matches documents  * containing a subset of terms provided by a {@link  * FilteredTermEnum} enumeration.  *  *<p>This query cannot be used directly; you must subclass  * it and define {@link #getEnum} to provide a {@link  * FilteredTermEnum} that iterates through the terms to be  * matched.  *  *<p><b>NOTE</b>: if {@link #setRewriteMethod} is either  * {@link #CONSTANT_SCORE_BOOLEAN_QUERY_REWRITE} or {@link  * #SCORING_BOOLEAN_QUERY_REWRITE}, you may encounter a  * {@link BooleanQuery.TooManyClauses} exception during  * searching, which happens when the number of terms to be  * searched exceeds {@link  * BooleanQuery#getMaxClauseCount()}.  Setting {@link  * #setRewriteMethod} to {@link #CONSTANT_SCORE_FILTER_REWRITE}  * prevents this.  *  *<p>The recommended rewrite method is {@link  * #CONSTANT_SCORE_AUTO_REWRITE_DEFAULT}: it doesn't spend CPU  * computing unhelpful scores, and it tries to pick the most  * performant rewrite method given the query. If you  * need scoring (like {@link FuzzyQuery}, use  * {@link TopTermsScoringBooleanQueryRewrite} which uses  * a priority queue to only collect competitive terms  * and not hit this limitation.  *  * Note that {@link QueryParser} produces  * MultiTermQueries using {@link  * #CONSTANT_SCORE_AUTO_REWRITE_DEFAULT} by default.  */
 end_comment
 begin_class
 DECL|class|MultiTermQuery
@@ -493,8 +484,9 @@ operator|new
 name|ScoringBooleanQueryRewrite
 argument_list|()
 decl_stmt|;
+comment|/** A rewrite method that first translates each term into    *  {@link BooleanClause.Occur#SHOULD} clause in a    *  BooleanQuery, and keeps the scores as computed by the    *  query.    *    *<p>This rewrite mode only uses the top scoring terms    * so it will not overflow the boolean max clause count.    * It is the default rewrite mode for {@link FuzzyQuery}.    *    *  @see #setRewriteMethod */
 DECL|class|TopTermsScoringBooleanQueryRewrite
-specifier|private
+specifier|public
 specifier|static
 specifier|final
 class|class
@@ -502,6 +494,42 @@ name|TopTermsScoringBooleanQueryRewrite
 extends|extends
 name|BooleanQueryRewrite
 block|{
+DECL|field|size
+specifier|private
+specifier|final
+name|int
+name|size
+decl_stmt|;
+comment|/**       * Create a TopTermsScoringBooleanQueryRewrite for       * at most<code>size</code> terms.      *<p>      * NOTE: if {@link BooleanQuery#getMaxClauseCount} is smaller than       *<code>size</code>, then it will be used instead.       */
+DECL|method|TopTermsScoringBooleanQueryRewrite
+specifier|public
+name|TopTermsScoringBooleanQueryRewrite
+parameter_list|(
+name|int
+name|size
+parameter_list|)
+block|{
+name|this
+operator|.
+name|size
+operator|=
+name|size
+expr_stmt|;
+block|}
+comment|/**       * Create a TopTermsScoringBooleanQueryRewrite that is limited      * to at most {@link BooleanQuery#getMaxClauseCount} terms.       */
+DECL|method|TopTermsScoringBooleanQueryRewrite
+specifier|public
+name|TopTermsScoringBooleanQueryRewrite
+parameter_list|()
+block|{
+name|this
+argument_list|(
+name|Integer
+operator|.
+name|MAX_VALUE
+argument_list|)
+expr_stmt|;
+block|}
 annotation|@
 name|Override
 DECL|method|rewrite
@@ -522,10 +550,17 @@ specifier|final
 name|int
 name|maxSize
 init|=
+name|Math
+operator|.
+name|min
+argument_list|(
+name|size
+argument_list|,
 name|BooleanQuery
 operator|.
 name|getMaxClauseCount
 argument_list|()
+argument_list|)
 decl_stmt|;
 specifier|final
 name|PriorityQueue
@@ -719,15 +754,100 @@ return|return
 name|bq
 return|;
 block|}
-comment|// Make sure we are still a singleton even after deserializing
-DECL|method|readResolve
-specifier|protected
-name|Object
-name|readResolve
+annotation|@
+name|Override
+DECL|method|hashCode
+specifier|public
+name|int
+name|hashCode
 parameter_list|()
 block|{
+specifier|final
+name|int
+name|prime
+init|=
+literal|17
+decl_stmt|;
+name|int
+name|result
+init|=
+literal|1
+decl_stmt|;
+name|result
+operator|=
+name|prime
+operator|*
+name|result
+operator|+
+name|size
+expr_stmt|;
 return|return
-name|TOP_TERMS_SCORING_BOOLEAN_REWRITE
+name|result
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|equals
+specifier|public
+name|boolean
+name|equals
+parameter_list|(
+name|Object
+name|obj
+parameter_list|)
+block|{
+if|if
+condition|(
+name|this
+operator|==
+name|obj
+condition|)
+return|return
+literal|true
+return|;
+if|if
+condition|(
+name|obj
+operator|==
+literal|null
+condition|)
+return|return
+literal|false
+return|;
+if|if
+condition|(
+name|getClass
+argument_list|()
+operator|!=
+name|obj
+operator|.
+name|getClass
+argument_list|()
+condition|)
+return|return
+literal|false
+return|;
+name|TopTermsScoringBooleanQueryRewrite
+name|other
+init|=
+operator|(
+name|TopTermsScoringBooleanQueryRewrite
+operator|)
+name|obj
+decl_stmt|;
+if|if
+condition|(
+name|size
+operator|!=
+name|other
+operator|.
+name|size
+condition|)
+return|return
+literal|false
+return|;
+return|return
+literal|true
 return|;
 block|}
 DECL|class|ScoreTerm
@@ -800,18 +920,6 @@ return|;
 block|}
 block|}
 block|}
-comment|/** A rewrite method that first translates each term into    *  {@link BooleanClause.Occur#SHOULD} clause in a    *  BooleanQuery, and keeps the scores as computed by the    *  query.    *    *<p>This rewrite mode only uses the top scoring terms    * so it will not overflow the boolean max clause count.    * It is the default rewrite mode for {@link FuzzyQuery}.    *    *  @see #setRewriteMethod */
-DECL|field|TOP_TERMS_SCORING_BOOLEAN_REWRITE
-specifier|public
-specifier|final
-specifier|static
-name|RewriteMethod
-name|TOP_TERMS_SCORING_BOOLEAN_REWRITE
-init|=
-operator|new
-name|TopTermsScoringBooleanQueryRewrite
-argument_list|()
-decl_stmt|;
 DECL|class|ConstantScoreBooleanQueryRewrite
 specifier|private
 specifier|static
